--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio-site",
   "version": "0.1.0",
-  "homepage": "https://dylancdavis.github.io/portfolio-site/",
+  "homepage": "https://dylcdav.dev/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
